--- a/_config.yml
+++ b/_config.yml
@@ -5,21 +5,20 @@ image_thumbs_loc: "/images/thumbs"
 google_analytics: "UA-46465113-2"
 
 # UI configs
-title: "Photography by Ram Patra"
+title: "Photography by Nikhil Mane"
 subtitle: "See the world through my eyes!"
-author: "Ram Patra"
+author: "Nikhil Mane"
 header:
  title: "Photography"
- subtitle: "by Ram Patra"
+ subtitle: "by Nikhil Mane"
 footer:
- name: "Hey there, my name is Ram"
+ name: "Hey there, my name is Nikhil"
  bio: "I am a developer and a tech aficionado from India. Love making teeny tiny apps solving tiny problems in life and now learning photography."
  github: "Want a website like this for yourself for free? Just <a href=\"https://github.com/ramswaroop/photography\">fork me on github</a> ;)"
 web_design: "AJ"
 social_urls:
-  facebook: "https://www.facebook.com/ramswaroop"
-  twitter: "https://www.twitter.com/ram__patra"
-  instagram: "https://www.instagram.com/ram_patra"
-  dribbble: "https://dribbble.com/rampatra"
-  linkedin: "https://in.linkedin.com/in/ram-patra"
-  github: "https://www.github.com/rampatra"
+  facebook: "https://www.facebook.com/n1khilmane"
+  twitter: "https://www.twitter.com/n1khilmane"
+  instagram: "https://www.instagram.com/n1khilmane"
+  linkedin: "https://www.linkedin.com/in/nikhil-mane-798b15147/"
+  github: "https://www.github.com/n1khilmane"
