--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Base configs
-baseurl: "https://photography.rampatra.com"
+baseurl: "https://n1khilmane.github.io/portfolio/"
 image_fulls_loc: "/images/fulls"
 image_thumbs_loc: "/images/thumbs"
 google_analytics: "UA-46465113-2"
