--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ header:
 footer:
  name: "Hey there, my name is Nikhil"
  bio: "I am a developer and a tech aficionado from India. Love making teeny tiny apps solving tiny problems in life and now learning photography."
- github: "Want a website like this for yourself for free? Just <a href=\"https://github.com/ramswaroop/photography\">fork me on github</a> ;)"
+ github: "Want a website like this for yourself for free? Just <a href=https://github.com/n1khilmane/portfolio>fork me on github</a> ;)"
 web_design: "AJ"
 social_urls:
   facebook: "https://www.facebook.com/n1khilmane"
