--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "portfolio",
     "portfolio website"
   ],
-  "author": "Ram Patra",
+  "author": "Nikhil Mane",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/n1khilmane/portfolio/issues"
